--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>יפעת פרוייקטים</title>
+    <title>starter app</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,700|Rubik:400,500,700&subset=hebrew" rel="stylesheet">
   </head>
   <body>
